--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
         <title>
-            Yelp for Help - ChatBot
+            University ChatBot
         </title>
         <link rel="stylesheet" href="Chatroom.css" />
         <style>
