--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                         console.log(chatroom);
                         chatroom.openChat();
                     }, 1000);
-                    document.getElementById("input_text").value = "Hi";
+<!--                    document.getElementById("input_text").value = "Hi";-->
                     document.getElementById("submit_input").click();
                 });
             </script>
