--- a/lubotweb/index.html
+++ b/lubotweb/index.html
@@ -6,7 +6,7 @@
         <title>
             University ChatBot
         </title>
-        <link rel="stylesheet" href="Chatroom.css" />
+        <link rel="stylesheet" href="/lubot/Chatroom.css" />
         <style>
             .chat-container {
                 font-family: 'Ubuntu', sans-serif;
@@ -41,7 +41,7 @@
         <body>
             <div class="chat-container"></div>
 
-            <script src="Chatroom.js"/></script>
+            <script src="/lubot/Chatroom.js"/></script>
             <script type="text/javascript">
                 var chatroom = window.Chatroom({
                     host: "http://localhost:5021",
